# MUSK

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: demo.ipynb  models.txt  run.sh
benchmarks/clip_benchmark/: cli.py  play.ipynb
benchmarks/clip_benchmark/datasets/: beit3_datasets.py  beit3_utils.py  builder.py  histopathology_datasets.py
benchmarks/clip_benchmark/metrics/: image_retrieval.py  linear_probe.py  linear_probe_text.py  zeroshot_classification.py  zeroshot_retrieval.py
benchmarks/clip_benchmark/models/: __init__.py  beit3_modeling_finetune.py
benchmarks/graphs/: fig1_radar.py  radar_fig.ipynb  temp-plot.html
benchmarks/results/: benchmark_mm_retrieval.json
clinical/: demo.ipynb  train_mil.py  wsi_dataset.py
clinical/configs/: config_brain_IDH_musk.yaml  config_clam_coxreg_musk.yaml  config_prognosis_musk.yaml
clinical/models/: __init__.py  abmil.py  clam.py  mmclassifier.py  model_utils.py
clinical/workspace/data/: download_features.txt
clinical/workspace/splits/: download_splits.txt  tcga_blca.csv  tcga_brca.csv  tcga_cesc.csv  tcga_coadread.csv  tcga_esca.csv  tcga_gbm.csv  tcga_hnsc.csv  tcga_lgg.csv  tcga_lihc.csv  tcga_luad.csv  tcga_lusc.csv  tcga_paad.csv  tcga_rcc.csv  tcga_skcm.csv  tcga_stad.csv  tcga_ucec.csv
musk/: demo.ipynb
pretrain/1_mask_pretrain/: README.md  modeling_vqkd.py
pretrain/1_mask_pretrain/configs/: pretrain_musk_large.yaml
pretrain/1_mask_pretrain/scripts/: run_pretrain.sh
pretrain/2_contrastive_pretrain/: README.md
pretrain/2_contrastive_pretrain/scripts/: train.sh
(+240 files in other folders)
